--- a/project_page/Ursa.html
+++ b/project_page/Ursa.html
@@ -130,7 +130,7 @@
                         stage:</p>
                     <div class="horizontal-container">
                         <!-- First Box: User -->
-                        <div class="box user-box">
+                        <div class="nobox user-box">
                             <h3 class="highlight-title">1. Who is our user?</h3>
                             <div class="user-icon">
                                 <img src="../assets/images/projects/XR/astronauts_user.png" alt="User Icon" />
@@ -139,7 +139,7 @@
                         </div>
 
                         <!-- Second Box: Challenge -->
-                        <div class="box challenge-box">
+                        <div class="nobox challenge-box">
                             <h3 class="highlight-title">2. What are some challenges they are facing?</h3>
                             <div class="project-basic-text center">
                                 <p>Astronauts often carry heavy equipment, restricting their use of hands for
