--- a/visual_designer_home.html
+++ b/visual_designer_home.html
@@ -102,11 +102,12 @@
                     <div class="project-card-large">
                         <img src="./assets/images/projects/NDA/OP_SunWATER+.png" alt="SunWATER+ Project" class="project-image-large">
                         <div class="project-info-large">
-                            <p class="project-label">SET TO LAUNCH IN Q4 2024</p>
+                            <p class="project-label">SUNWATER PLUS</p>
                             <h2>Solar-Powered Solutions for Recycling Greywater</h2>
                              <!-- Add the new tag here -->
                             <p class="project-tag">NSF Funded Project</p>
-                            <button class="learn-more-btn">Learn More →</button>
+                            <button class="learn-more-btn" onclick="window.location.href='project_page/sunwater_plus.html';">Learn More →</button>
+
                         </div>
                     </div>
                 </section>
