--- a/project_page/sunwater_plus.html
+++ b/project_page/sunwater_plus.html
@@ -165,9 +165,7 @@
                                         data details, making the system more intuitive and actionable.</p>
                                     <p>✍️</p>
                                     <p class="highlight-title"><strong>What I did</strong></p>
-                                    <p>I developed a color-coded system using three distinct
-                                        colors (green, yellow, red) to represent the status of the water quality—safe,
-                                        warning, and critical—making it immediately recognizable for users.</p>
+                                    <p>I developed a color-coded system using three distinct colors (yellow, green, blue) to represent water quality status—'Attention Needed,' 'Irrigation Safe,' and 'Indoor Safe'—making it easily recognizable for users.</p>
                                 </div>
                             </div>
                             <div class="tri-image-container">
