--- a/project_page/sunwater_plus.html
+++ b/project_page/sunwater_plus.html
@@ -58,7 +58,7 @@
             </nav>
             <article class="ar_developer active" data-page="ar_developer">
                 <header>
-                    <h2 class="h2 article-title">NASA Suit Challenge</h2>
+                    <h2 class="h2 article-title">SunWATER + </h2>
                 </header>
 
                 <!-- This is the part to put in content details -->
