--- a/visual_designer_home.html
+++ b/visual_designer_home.html
@@ -98,8 +98,8 @@
                 </header>
 
                 <!-- Featured Project Section -->
-                <section class="featured-project">
-                    <div class="project-card-large">
+                <section class="featured-project">                    
+                    <a href="project_page/sunwater_plus.html" class="project-card-large">
                         <img src="./assets/images/projects/NDA/OP_SunWATER+.png" alt="SunWATER+ Project" class="project-image-large">
                         <div class="project-info-large">
                             <p class="project-label">SUNWATER PLUS</p>
@@ -109,30 +109,30 @@
                             <button class="learn-more-btn" onclick="window.location.href='project_page/sunwater_plus.html';">Learn More →</button>
 
                         </div>
-                    </div>
+                    </a>
                 </section>
 
                 <!-- Other Projects Section -->
                 <section class="project-grid">
-                    <div class="project-card">
+                    <a href="project_page/shiftpixy.html" class="project-card">
                         <img src="./assets/images/projects/ShiftPixy/op_clukin_luck_animation.gif" alt="ShiftPixy Labs" class="project-image">
                         <div class="project-info">
                             <p class="project-label">SET TO LAUNCH IN 2025</p>
                             <h3>Brading deisgn</h3>
                             <button class="learn-more-btn">Learn More →</button>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="project-card">
+                    <a href="project_page/xr_case_study.html" class="project-card">
                         <img src="./assets/images/projects/Innovative_design/MR_boba_demo.gif" alt="XR" class="project-image">
                         <div class="project-info">
                             <p class="project-label">CONCEPT</p>
                             <h3>XR case study(a set of XR project)</h3>
                             <button class="learn-more-btn">Learn More →</button>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="project-card">
+                    <a href="project_page/Art.html" class="project-card">
                         <img src="./assets/images/projects/TechnicalArt/Design_Scifi.png" alt="Print Art"
                             class="project-image">
                         <div class="project-info">
@@ -140,9 +140,9 @@
                             <h3>Even planning & design work sample</h3>
                             <button class="learn-more-btn">Learn More →</button>
                         </div>
-                    </div>
+                    </s>
 
-                    <div class="project-card">
+                    <a href="project_page/Ursa.html" class="project-card">
                         <img src="./assets/images/projects/XR/op_Ursa.png" alt="AR Design for Astronauts"
                             class="project-image">
                         <div class="project-info">
@@ -150,7 +150,7 @@
                             <h3>AR Voice Control System for Astronauts</h3>
                             <button class="learn-more-btn" onclick="window.location.href='project_page/Ursa.html';">Learn More →</button>
                         </div>
-                    </div>
+                    </a>
                 </section>
                 
             </article>
