--- a/visual_designer_home.html
+++ b/visual_designer_home.html
@@ -84,7 +84,7 @@
             <nav class="navbar">
                 <ul class="navbar-list">
                     <li class="navbar-item">
-                        <button class="navbar-link active" data-nav-link>Visual Designer</button>
+                        <button class="navbar-link active" data-nav-link>Designer</button>
                     </li>
                     <li class="navbar-item">
                         <button class="navbar-link"
@@ -94,7 +94,7 @@
             </nav>
             <article class="ar_developer active" data-page="ar_developer">
                 <header>
-                    <h2 class="h2 article-title">Visual Designer</h2>
+                    <h2 class="h2 article-title">Designer</h2>
                 </header>
 
                 <!-- Featured Project Section -->
@@ -114,11 +114,11 @@
 
                 <!-- Other Projects Section -->
                 <section class="project-grid">
-                    <a href="project_page/shiftpixy.html" class="project-card">
+                    <a href="project_page/shiftpixy.html" class="project-card-important">
                         <img src="./assets/images/projects/ShiftPixy/op_clukin_luck_animation.gif" alt="ShiftPixy Labs" class="project-image">
                         <div class="project-info">
-                            <p class="project-label">SET TO LAUNCH IN 2025</p>
-                            <h3>Brading deisgn</h3>
+                            <p class="project-label-important">SET TO LAUNCH IN 2025</p>
+                            <h3>Digital Food Brands</h3>
                             <button class="learn-more-btn">Learn More →</button>
                         </div>
                     </a>
@@ -126,13 +126,13 @@
                     <a href="project_page/xr_case_study.html" class="project-card">
                         <img src="./assets/images/projects/Innovative_design/MR_boba_demo.gif" alt="XR" class="project-image">
                         <div class="project-info">
-                            <p class="project-label">CONCEPT</p>
-                            <h3>XR case study(a set of XR project)</h3>
+                            <p class="project-label">A JOURNEY THROUGH XR PROJECTS</p>
+                            <h3>XR Innovations Showcase</h3>
                             <button class="learn-more-btn">Learn More →</button>
                         </div>
                     </a>
 
-                    <a href="project_page/Art.html" class="project-card">
+                    <a href="project_page/art_gallery.html" class="project-card">
                         <img src="./assets/images/projects/TechnicalArt/Design_Scifi.png" alt="Print Art"
                             class="project-image">
                         <div class="project-info">
@@ -142,11 +142,11 @@
                         </div>
                     </s>
 
-                    <a href="project_page/Ursa.html" class="project-card">
+                    <a href="project_page/Ursa.html" class="project-card-important-ursa">
                         <img src="./assets/images/projects/XR/op_Ursa.png" alt="AR Design for Astronauts"
                             class="project-image">
                         <div class="project-info">
-                            <p class="project-label">NASA SUIT CHALLENGE</p>
+                            <p class="project-label-important">NASA SUIT CHALLENGE</p>
                             <h3>AR Voice Control System for Astronauts</h3>
                             <button class="learn-more-btn" onclick="window.location.href='project_page/Ursa.html';">Learn More →</button>
                         </div>
