add spacer to swp

--- a/project_page/sunwater_plus.html
+++ b/project_page/sunwater_plus.html
@@ -71,7 +71,7 @@
                         <div class="overlay"></div>
                     </div>
                     <div class="project-info">
-                        <h2 class="project-title">Scalable Water Management Dashboard for Multi-Residential and Hotels
+                        <h2 class="project-title">Scalable Water Management System
                         </h2>
                         <p class="project-basic-text">
                             SunWATER+ is an innovative water management system integrating AI-powered monitoring and
@@ -90,6 +90,8 @@
                 </section>
                 <section class="overview-section" id="overview">
                     <h2 class="section-title">Overview</h2>
+                    <div class="spacer"></div>
+
                     <div class="text-with-image">
                         <img src="../assets/images/projects/NDA/graywater.png" alt="The makeup of greywater"
                             class="inline-image">
@@ -112,6 +114,8 @@
                                 monitoring of water usage, filtration efficiency, and system health.</strong>
                         </p>
                     </div>
+                    <div class="small-spacer"></div>
+
                     <div class="project-image-grid">
                         <div class="signlepage-project-image-wrapper">
                             <img src="../assets/images/projects/NDA/SWP_3.png" alt="SunWATER Plus"
@@ -124,6 +128,8 @@
                             <p class="signlepage-project-caption">Phase 1 UI Design</p>
                         </div>
                     </div>
+                    <div class="small-spacer"></div>
+
                     <p class="project-basic-text">
                         This required constant cross-disciplinary collaboration to ensure that the system is both
                         technically robust and user-centric. Due to the scientific rigor and complexity of this project,
@@ -131,9 +137,13 @@
                         <span class="project-highlight-text">Please feel free to contact me directly for further details
                             if interested.</span>
                     </p>
+                    <div class="small-spacer"></div>
+
                     <section id="reflection" class="overview-section">
                         <h2 id="design-context" class="section-title">Reflection</h2>
                         <h3 class="highlight-title center">What I did & What I learned</h3>
+                        <div class="small-spacer"></div>
+
                         <p class="project-basic-text">Throughout my work on the SunWATER+ project, I gained invaluable
                             experience in designing user-centric interfaces for complex systems. Collaborating with
                             interdisciplinary teams of engineers and researchers taught me how to balance technical
@@ -144,6 +154,8 @@
                             nanotechnology into scalable systems. This project enhanced my ability to approach design
                             challenges holistically, ensuring the user interface supports both functionality and ease of
                             use.</p>
+                            <div class="small-spacer"></div>
+
                         <div class="horizontal-container">
                             <div class="tri-image-container">
                                 <img src="../assets/images/projects/NDA/SWP_colorPalette.png"
