--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <!-- XR & Game Development -->
                 <li class="service-item">
                     <div class="service-icon-box">
-                        <a href="ar_developer.html" class="service-link">
+                        <a href="visual_designer_home.html" class="service-link">
                             <ion-icon name="game-controller-outline" class="large-icon"></ion-icon>
                         </a>
                     </div>
