--- a/visual_designer_home.html
+++ b/visual_designer_home.html
@@ -142,7 +142,7 @@
                         </div>
                     </s>
 
-                    <a href="project_page/Ursa.html" class="project-card-important-ursa">
+                    <a href="project_page/ursa.html" class="project-card-important-ursa">
                         <img src="./assets/images/projects/XR/op_Ursa.png" alt="AR Design for Astronauts"
                             class="project-image">
                         <div class="project-info">
