--- a/visual_designer_home.html
+++ b/visual_designer_home.html
@@ -136,8 +136,8 @@
                         <img src="./assets/images/projects/TechnicalArt/Design_Scifi.png" alt="Print Art"
                             class="project-image">
                         <div class="project-info">
-                            <p class="project-label">PRINT ART</p>
-                            <h3>Even planning & design work sample</h3>
+                            <p class="project-label">ILLUSTRATIONS ART AND MORE</p>
+                            <h3>Art gallery</h3>
                             <button class="learn-more-btn">Learn More →</button>
                         </div>
                     </s>
