--- a/project_page/shiftpixy.html
+++ b/project_page/shiftpixy.html
@@ -155,7 +155,7 @@
                             <p class="signlepage-project-caption">Track Segment Logic with Obstacles</p>
                         </div>
                     </div>
-                    <p class="project-basic-text"> TTo solve this, I introduced a dynamic difficulty adjustment system
+                    <p class="project-basic-text"> To solve this, I introduced a dynamic difficulty adjustment system
                         based on the player's speed and progress. This system created a more structured difficulty curve
                         that scaled smoothly as players advanced, ensuring a more engaging experience.
                     </p>
