change boba for SBs

--- a/project_page/xr_case_study.html
+++ b/project_page/xr_case_study.html
@@ -99,16 +99,31 @@
                 
                     <section class="project-text" id="boba-making">
                         <h3 class="h3-title">Mix Reality - Boba Making Experience</h3>
-                        <p>
+                        <!-- <p>
                             During an exciting hackathon at Stanford, my team created a mixed reality experience focused
                             on
                             making boba tea. Using Unity and the Quest 3, we allowed users to create their digital twin
                             of a
                             boba cup, with the recipe adjusting based on the cup's volume. This project brought together
                             interactivity, creativity, and real-time adjustments.
+                        </p> -->
+                        <p>
+                            During the Wynwood Food Festival in Miami, I contributed as a designer to create an interactive mixed reality experience centered around coffee and milk tea beverages. <br>This project aimed to engage festival attendees with an immersive and playful activity. I designed the interaction flow and visuals, allowing users to customize and interact with their virtual drinks, enhancing the festival's interactive offerings and providing a memorable, hands-on digital experience.
                         </p>
                         <p><strong>Key Technologies</strong>: Unity, Quest 3, Mixed Reality</p>
                         <p><strong>Role</strong>: Developer and Designer</p>
+                        <div class="project-image-grid">
+                            <div class="signlepage-project-image-wrapper">
+                                <img src="../assets/images/projects/XR/boba1.png"
+                                    alt="Project Image" class="signlepage-project-image">
+                                <p class="signlepage-project-caption">Food Festival at Wynwood, Miami</p>
+                            </div>
+                            <div class="signlepage-project-image-wrapper">
+                                <img src="../assets/images/projects/XR/boba_2.png"
+                                    alt="Project Image" class="signlepage-project-image">
+                                <p class="signlepage-project-caption">Interaction Design</p>
+                            </div>
+                        </div>
                         <div class="project-image-grid">
                             <div class="signlepage-project-image-wrapper">
                                 <img src="../assets/images/projects/Innovative_design/MR_boba_demo.gif"
@@ -118,7 +133,7 @@
                             <div class="signlepage-project-image-wrapper">
                                 <img src="../assets/images/projects/Innovative_design/MR_boba_testing.gif"
                                     alt="Project Image" class="signlepage-project-image">
-                                <p class="signlepage-project-caption">Testing on site</p>
+                                <p class="signlepage-project-caption">Testing</p>
                             </div>
                         </div>
                     </section>
