update drawing buddy

--- a/project_page/art_gallery.html
+++ b/project_page/art_gallery.html
@@ -91,8 +91,8 @@
                 </header>
 
                 <section id="reflection" class="overview-section">
-                    <h3 class="highlight-title center">Ongoing Master’s Thesis</h3>
-                    <p class="project-basic-text">Painting has always been an integral part of my life, a medium through
+                    <!-- <h3 class="highlight-title center">Ongoing Master’s Thesis</h3> -->
+                    <!-- <p class="project-basic-text">Painting has always been an integral part of my life, a medium through
                         which I express my deepest passion for visual communication. From a young age, drawing helped me
                         connect with and understand the world around me. I remember sketching churches, noting how
                         Catholic crucifixes include Jesus while Protestant crosses stand bare. I also recall studying
@@ -113,19 +113,105 @@
 
                         I would love to hear your thoughts if this intersection of AI and traditional art resonates with
                         you:)
-                    </p>
-                    <div class = "spacer"></div>
-                    <h2 style="color: white; text-align: center;"> Creative Tool Projects</h2>
+                    </p> -->
+
+                    <h2 style="color: white; text-align: center;"> Creative Tools Design</h2>
                     <br>
 
                     <h3 class="highlight-title center">Drawing Buddy – Interactive Art Tool for Kids</h3>
-                    <p class="project-basic-text">Drawing Buddy is an AI-powered interactive drawing tool developed with
+                    <!-- <p class="project-basic-text">Drawing Buddy is an AI-powered interactive drawing tool developed with
                         Sketch RNN and custom-trained models for enhanced stability and reliable results. This tool
                         helps children learn to draw by providing guided, step-by-step assistance and feedback.
                         <br>The tool's experience emphasizes accessibility and user empowerment. With simple, engaging
                         visuals and a supportive process, children are motivated to explore their creativity with
                         confidence.
+                    </p> -->
+                    <div class="spacer"></div>
+                    <div class="project-image-grid">
+                        <div class="signlepage-project-image-wrapper">
+                            <img src="../assets/images/projects/art_viusal/creative_tools_DB/finallook.png"
+                                alt="Project Image" class="signlepage-project-image">
+                        </div>
+                        <div class="signlepage-project-image-wrapper">
+                            <img src="../assets/images/projects/art_viusal/creative_tools_DB/DB_kids.gif"
+                                alt="Project Image" class="signlepage-project-image">
+                            <img src="../assets/images/projects/art_viusal/creative_tools_DB/usermap.png"
+                                alt="Project Image" class="signlepage-project-image">
+                        </div>
+                    </div>
+                    <div class="spacer"></div>
+                    <p class="project-basic-text">Drawing Buddy is an AI-augmented co-creative system designed to bridge
+                        the gap between traditional art and modern technology, fostering creativity, confidence, and
+                        skill development in K-12 education. <br>By integrating tactile interactions, real-time AI
+                        feedback, and user-centered design, it transforms traditional artistic practices into accessible
+                        and engaging learning experiences.
+                        <br>
+                        <br>
+                        While digital art tools are abundant, they often lack the tactile,
+                        hands-on experiences crucial for the skill development of young learners. Traditional art
+                        mediums, despite their rich educational potential, are intimidating to beginners and children
+                        due to technical demands, discouraging participation.<br>
+
+                        Drawing Buddy addresses these challenges by introducing AI-guided real-time feedback and hybrid
+                        digital-tactile interactions, making traditional art more appealing and approachable.
                     </p>
+                    <div class="spacer"></div>
+                    <h3 class="signlepage-project-caption">Inspiration</h3>
+                    <div class="small-spacer"></div>
+                    <div class="project-image-grid">
+                        <div class="signlepage-project-image-wrapper">
+                            <img src="../assets/images/projects/art_viusal/creative_tools_DB/interview.png"
+                                alt="Project Image" class="signlepage-project-image">
+                            <p class="signlepage-project-caption"> (a) Consultation with art teachers at John O’Connell
+                                High School. <br> (b) A student expressing difficulty in understanding the image’s
+                                structure. <br> (c) Gathering feedback from a group of children (aged 5–10) at Maker
+                                Faire.</p>
+                        </div>
+                    </div>
+
+                    <div class="small-spacer"></div>
+
+                    <p class="project-basic-text">Earlier this year, while teaching an art class at John O'Connell High
+                        School, I observed a stark contrast in students' attitudes toward artistic creation. Some
+                        students completed tasks half-heartedly just to earn credits, while others were fully immersed.
+                        Many, however, lacked confidence and gave up altogether.
+                        <br><br>
+
+                        Conversations with art teachers revealed that traditional media remain the primary teaching
+                        tools, yet many students struggle when faced with a blank canvas. One student attempted to draw
+                        the video game character Yoshi but found it difficult to maintain proportions and structure,
+                        visibly frustrated. Another tried to depict fireworks in the night sky but felt unable to
+                        translate her vision onto paper, displaying clear disappointment by the end of the session.
+                        These experiences resonated with my own childhood struggles in art due to a lack of guidance and
+                        confidence.
+                        <br><br>
+
+                        This phenomenon aligns with Davis’s “U-shaped theory,” which highlights a decline in children’s
+                        interest and confidence in drawing as they grow older, driven by educational pressures and the
+                        prioritization of standardized assessments.
+                        <br><br>
+
+
+                        On that day, I taught six periods, interacting with around 180 students and speaking with
+                        several art teachers. A common theme emerged: many students did not know how to start drawing or
+                        felt stuck after taking the initial steps. They expressed that while they could follow
+                        step-by-step guidance in class, they struggled to create independently, unable to translate
+                        mental images into sketches on paper.
+                    </p>
+                    <div class="spacer"></div>
+                    <h3 class="signlepage-project-caption">Initial Design and Testing</h3>
+                    <div class="small-spacer"></div>
+                    <p class="project-basic-text">
+
+                        To help students overcome these challenges, we designed the first prototype of the Drawing Buddy
+                        (see picture below). This compact drawing box featured a lightbox at its base to record user
+                        input.
+                        When needed, the system would generate suggestions for the next steps in the creative process
+                        and project them onto the paper under the lightbox. This feature aimed to provide actionable
+                        visual guidance, helping users overcome hesitation or a lack of inspiration.<br><br>
+
+
+                        We also brought this drawing assistant to Maker Faire to collect additional user feedback.</p>
                     <div class="project-image-grid">
                         <div class="signlepage-project-image-wrapper">
                             <img src="../assets/images/projects/art_viusal/ArtTool_Poster 1.png" alt="Project Image"
@@ -135,14 +221,73 @@
                         <div class="signlepage-project-image-wrapper">
                             <img src="../assets/images/projects/art_viusal/ArtTool_Poster 2.png" alt="Project Image"
                                 class="signlepage-project-image">
-                            <p class="signlepage-project-caption">Prototype</p>
+                            <p class="signlepage-project-caption">Initial Prototype</p>
                         </div>
                     </div>
-                    <div class = "spacer"></div>
+                    <div class="spacer"></div>
+                    <h3 class="signlepage-project-caption">Feedback and Design Goals</h3>
+                    <div class="small-spacer"></div>
+                    <p class="project-basic-text">
+                        Later iterations highlighted the need for a more flexible medium, such as larger canvases and
+                        support for younger users. This led to the development of a second version of Drawing Buddy,
+                        which functioned more like a toy. It included a control dial with generation buttons and a
+                        microphone, allowing users to receive drawing suggestions projected directly onto their canvas
+                        or medium of choice.
+                        <br><br>
+                        <strong>Accessibility:</strong> Develop an intuitive system adaptable to various skill
+                        levels.<br>
+
+                        <strong>Interactivity:</strong> Provide real-time feedback and actionable guidance.<br>
+
+                        <strong>Creativity First:</strong> Encourage exploration and self-expression without fear of
+                        mistakes.<br>
+
+                        <strong>Iterative Design:</strong>Continuously refine the system based on user feedback.
+                    </p>
+                    <div class="project-image-grid">
+                        <div class="signlepage-project-image-wrapper">
+                            <img src="../assets/images/projects/art_viusal/creative_tools_DB/logic.png" alt="Project Image"
+                                class="signlepage-project-image">
+                            <p class="signlepage-project-caption">Gathering Feedback for AI system</p>
+                        </div>
+                        <div class="signlepage-project-image-wrapper">
+                            <img src="../assets/images/projects/art_viusal/creative_tools_DB/howitworks.png" alt="Project Image"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Second version of Drawing Buddy</p>
+                        </div>
+                    </div>
+
+                    <div class="spacer"></div>
+                    <h3 class="signlepage-project-caption">Takeaways and Future Plan</h3>
+                    <div class="small-spacer"></div>
+                    <div class="project-image-grid">
+                        <div class="signlepage-project-image-wrapper">
+                            <img src="../assets/images/projects/art_viusal/creative_tools_DB/DB_Pre_gif.gif" alt="Project Image"
+                                class="signlepage-project-image">
+                            <p class="signlepage-project-caption"> Sharing insights at the Jacobs Hall Annual Expo</p>
+                        </div>
+                        <div class="signlepage-project-image-wrapper">
+                            <img src="../assets/images/projects/art_viusal/creative_tools_DB/designphilosophy.png" alt="Project Image"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Design Philosophy</p>
+                        </div>
+                    </div>
+                    <div class="small-spacer"></div>
+                    <p class="project-basic-text">
+
+                        Developing Drawing Buddy taught me that creativity thrives when supported by a system that values both structure and freedom. It’s not just about removing barriers like fear of failure, but about creating moments of discovery—where a child realizes, “I can figure this out.” I learned that true engagement comes when tools feel like collaborators rather than instructors, and when they invite curiosity instead of dictating outcomes. <br><br>Moving forward, I’m interested in exploring how design can create more of these “aha” moments, not by giving all the answers, but by leaving space for users to surprise themselves.</pr>
+
+
+
+                    <div class="spacer"></div>
                     <h3 class="highlight-title center">Concept Art Generation Pipeline</h3>
                     <br>
                     <p class="project-basic-text">
-                        I explored different art style pipelines for 3D artists to generate stable, realistic results for scene design. This pipeline, created with ComfyUI and Stable Diffusion, is designed as an extensibility solution that redefines the process of creating realistic environment concept art. I tested and integrated it with TouchDesigner to generate real-time images, and it can be further integrated into Unity for quickly generating art backgrounds for 2D games.
+                        I explored different art style pipelines for 3D artists to generate stable, realistic results
+                        for scene design. This pipeline, created with ComfyUI and Stable Diffusion, is designed as an
+                        extensibility solution that redefines the process of creating realistic environment concept art.
+                        I tested and integrated it with TouchDesigner to generate real-time images, and it can be
+                        further integrated into Unity for quickly generating art backgrounds for 2D games.
                     </p>
                     <div class="project-image-grid">
                         <div class="signlepage-project-image-wrapper">
@@ -150,7 +295,7 @@
                                 class="signlepage-project-image">
                             <p class="signlepage-project-caption">Output</p>
                         </div>
-                       
+
                     </div>
                 </section>
                 <h3 class="highlight-title center">Some of My Visual Collections</h3>
