--- a/project_page/ursa.html
+++ b/project_page/ursa.html
@@ -394,7 +394,7 @@
                         <div class="signlepage-project-image-wrapper">
                             <img src="../assets/images/projects/XR/NASAsuits_onsite.png" alt="NASA Houston Center"
                                 class="signlepage-project-image">
-                            <p class="signlepage-project-caption">Me with HMD team at the NASA center</p>
+                            <p class="signlepage-project-caption">Me with the HMD team at the NASA center</p>
                         </div>
                         <div class="signlepage-project-image-wrapper">
                             <img src="../assets/images/projects/XR/NASAsuits_team.png" alt="Whole dev team"
