--- a/project_page/xr_case_study.html
+++ b/project_page/xr_case_study.html
@@ -99,17 +99,17 @@
                 
                     <section class="project-text" id="boba-making">
                         <h3 class="h3-title">Mix Reality - Boba Making Experience</h3>
-                        <!-- <p>
-                            During an exciting hackathon at Stanford, my team created a mixed reality experience focused
+                        <p>
+                            During an exciting hackathon at Stanford, We build a mixed reality experience focused
                             on
                             making boba tea. Using Unity and the Quest 3, we allowed users to create their digital twin
                             of a
                             boba cup, with the recipe adjusting based on the cup's volume. This project brought together
                             interactivity, creativity, and real-time adjustments.
-                        </p> -->
-                        <p>
-                            During the Wynwood Food Festival in Miami, I contributed as a designer to create an interactive mixed reality experience centered around coffee and milk tea beverages. <br>This project aimed to engage festival attendees with an immersive and playful activity. I designed the interaction flow and visuals, allowing users to customize and interact with their virtual drinks, enhancing the festival's interactive offerings and providing a memorable, hands-on digital experience.
                         </p>
+                        <!-- <p>
+                            During the Wynwood Food Festival in Miami, I contributed as a designer to create an interactive mixed reality experience centered around coffee and milk tea beverages. <br>This project aimed to engage festival attendees with an immersive and playful activity. I designed the interaction flow and visuals, allowing users to customize and interact with their virtual drinks, enhancing the festival's interactive offerings and providing a memorable, hands-on digital experience.
+                        </p> -->
                         <p><strong>Key Technologies</strong>: Unity, Quest 3, Mixed Reality</p>
                         <p><strong>Role</strong>: Developer and Designer</p>
                         <div class="project-image-grid">
